fix: fix overflow on mobile

--- a/packages/landing-page/assets/css/main.css
+++ b/packages/landing-page/assets/css/main.css
@@ -15,7 +15,13 @@
             U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
 
+    html {
+        @apply overflow-x-hidden;
+        font-family: "Inter Variable", sans-serif;
+    }
+
     body {
+        @apply overflow-x-hidden;
         font-family: "Inter Variable", sans-serif;
     }
 }
